<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginScreen"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/black">
    <ImageView
        android:id="@+id/backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow"
        android:layout_gravity="top" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="42sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernametext"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintText"
        android:textColorHint="@color/white"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:hint="@string/usernameHint"
            android:paddingStart="10dp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordtext"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/HintText"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Passwordhint"
            android:paddingStart="10dp"
            android:background="@drawable/text_background"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:text="@string/loginbtnname"
        android:layout_gravity="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/needhelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/need_help"
        android:textColor="@color/textfieldcolor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="39dp"
        android:id="@+id/signup"
        android:text="@string/new_to_queen_sign_up_now"
        android:textColor="@color/textfieldcolor"
        />

</LinearLayout>